# internal/oas/oas_validators_gen.go
@@ -6909,6 +6909,34 @@ func (s *RunSummary) Validate() error {
 		})
 	}
 	if err := func() error {
+		if value, ok := s.PhaseProgressPct.Get(); ok {
+			if err := func() error {
+				if err := (validate.Float{
+					MinSet:        true,
+					Min:           0,
+					MaxSet:        true,
+					Max:           100,
+					MinExclusive:  false,
+					MaxExclusive:  false,
+					MultipleOfSet: false,
+					MultipleOf:    nil,
+					Pattern:       nil,
+				}).Validate(float64(value)); err != nil {
+					return errors.Wrap(err, "float")
+				}
+				return nil
+			}(); err != nil {
+				return err
+			}
+		}
+		return nil
+	}(); err != nil {
+		failures = append(failures, validate.FieldError{
+			Name:  "phase_progress_pct",
+			Error: err,
+		})
+	}
+	if err := func() error {
 		if value, ok := s.Headline.Get(); ok {
 			if err := func() error {
 				if err := value.Validate(); err != nil {
